Small fix in dark mode
There is some description text added in preferences and with this commit
te color of that text is fixed.

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -517,6 +517,9 @@ html.dark-mode ._2c9g {
 html.dark-mode ._374b ._374d ._4ng2 {
 	color: var(--base-seventy);
 }
+html.dark-mode ._374b ._374d ._6cs7 {
+	color: var(--base-fourty);
+}
 
 /* Dialog: title and names */
 html.dark-mode ._374c,
